[package]
name = "signed-decimal-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-std = "1.1.9"
num-traits = { version = "0.2", default-features = false }
thiserror = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
cosmwasm-derive = "1"
schemars = "0.8"